# New-Compilator

./: CMakeLists.txt
docs/: guia.md
include/mycc/: version.hpp
scripts/: rebuild.sh  run_tests.sh
src/: ast.hpp  cli.cpp  cli.hpp  codegen.cpp  codegen.hpp  diagnostics.cpp  diagnostics.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  semantics.hpp  token.hpp
tests/: 02_arrays_sum_while.my  03_assign_impl_semicolon.my  04_if_else.my  05_funcs_and_calls.my  06_expr_precedence.my  07_arrays_nested.my  08_func_calls_typecheck.my  09_func_calls_bad_arity.my (fail)  100_index_non_int.my  101_call_undeclared.my  102_call_arg_type_mismatch.my  103_func_redef_diff_signature.my  104_return_value_in_void.my  105_missing_return_in_nonvoid.my  106_if_only_one_branch_returns.my  10_return_check_fail.my (fail)  11_if_both_branches_return.my  12_shadowing_ok.my  13_params_implicit_conv_ok.my  14_unary_ok.my  15_print_if_while.my  90_should_fail_missing_semicolon.my  91_should_fail_bad_type_suffix.my  92_unary_type_errors.my  93_unary_minus_on_bool.my  94_equality_mismatch.my  95_comparison_non_int.my  96_assign_undeclared.my  97_redeclaration_same_scope.my  98_use_before_decl.my  99_while_cond_not_bool.my  arrays.my  arrays_assign.my  arrays_sum.my  calls.my  calls_bad_arity.my  calls_bad_type.my  calls_ok.my  ctrl.my  exprs.my  (+3 more)
